Hide data on product edit for demo

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -1704,7 +1704,7 @@ img{
     content: "";
     position: absolute;
     width: 1px;
-    height: 100px;
+    height: 100%;
     background: #DADADA;
     right: 0;
     top: 0;
