--- a/app/views/spree/layouts/manage.html.erb
+++ b/app/views/spree/layouts/manage.html.erb
@@ -123,6 +123,7 @@
       <%= javascript_include_tag "spree/manage/js/classie.js" %>
 
       <%= javascript_include_tag "spree/manage/js/uisearch.js" %>
+      <%= javascript_include_tag "spree/manage/js/jquery.pickmeup.min.js" %>
     	<script>
     		new UISearch( document.getElementById( 'sb-search' ) );
     	</script>
