--- a/app/views/spree/manage/shared/side_menu/category/_my_account.html.erb
+++ b/app/views/spree/manage/shared/side_menu/category/_my_account.html.erb
@@ -1,12 +1,14 @@
-<a href="<%#= manage_my_account_url %>">
+<a href="<%= manage_account_url %>">
   <h3><%=image_tag("spree/manage/img/my_account.png")%>
     <span class="tablet-hide">My Account
       <!-- <i class="fa fa-angle-left"></i> -->
     </span>
   </h3>
 </a>
+<% if nil %>
 <div class="accordion-block">
   <ul>
     <li><a href=""></a></li>
   </ul>
 </div>
+<% end %>
