--- a/app/views/spree/cust/products/show.html.erb
+++ b/app/views/spree/cust/products/show.html.erb
@@ -14,8 +14,7 @@
 							</div>
 							<div class="row">
 								<div class="col1">
-                  <%= image_tag("spree/manage/img/product-img4.jpg", class: "prodcut-view-img")%>
-									<!-- <img src="img/product-img4.jpg" class="product-view-img"> -->
+									<%= render :partial => 'image' %>
 									<p class="desc"><b>Allergans:</b> Gluten</p>
 									<p class="desc"><b></b> Eggs</p>
 									<p class="desc"><b></b> Etca</p>
