--- a/app/views/spree/manage/products/show.html.erb
+++ b/app/views/spree/manage/products/show.html.erb
@@ -17,7 +17,7 @@
 			</div>
 			<div class="row">
 				<div class="col1">
-          <%= image_tag("spree/manage/img/product-img4.jpg", class: "prodcut-view-img")%>
+					<%= render :partial => 'image' %>
 
 					<p class="desc"><b>Allergans:</b> Gluten</p>
 					<p class="desc"><b></b> Eggs</p>
