--- a/app/views/spree/cust/orders/index.html.erb
+++ b/app/views/spree/cust/orders/index.html.erb
@@ -39,7 +39,7 @@
             <a href="" class="sort-name">Order # <i class="fa fa-sort"></i></a>
           </div>
           <div class="cel">
-            <a href="" class="sort-name">Delivery Date<i class="fa fa-sort"></i></a>
+            <a href="" class="sort-date">Delivery Date<i class="fa fa-sort"></i></a>
           </div>
           <div class="cel">
             <a href="" class="sort-sku">Total Items <i class="fa fa-sort"></i></a>
