Finish order index views for customer and manage portals

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -2602,7 +2602,7 @@ img{
 	.orders-list-table .tRow .cel:nth-of-type(3):before { content: "#"; }
 	.orders-list-table .tRow .cel:nth-of-type(5):before { content: "Total Items:"; }
 	.orders-list-table .tRow .cel:nth-of-type(6):before { content: "Total:"; }
-	.orders-list-table .tRow .cel:nth-of-type(8):before { content: "Approve"; }
+	.orders-list-table .tRow .cel.approve:before { content: "Approve"; }
 	.orders-list-table .tRow .cel img {
 	    margin: 0 auto;
 	}
