--- a/app/views/spree/manage/orders/index.html.erb
+++ b/app/views/spree/manage/orders/index.html.erb
@@ -65,7 +65,7 @@
               <div class="cel"><%= order.item_count %></div>
               <div class="cel"> <%= number_to_currency(order.total) %></div>
               <div class="cel"> <%= order.state %></div>
-              <div class="cel"><input type="checkbox"></div>
+              <div class="cel approve"><input type="checkbox"></div>
               <div class="cel"></div>
             </div>
           <% end %>
