--- a/app/views/spree/manage/products/edit.html.erb
+++ b/app/views/spree/manage/products/edit.html.erb
@@ -1,9 +1,11 @@
 <div class="product-edit-block">
-  <form id="product-edit-form">
+  <!-- <form id="product-edit-form"> -->
+  <%= form_for @product, url: manage_product_url(@product), html: {id: "product-edit-form"} do |f|%>
     <p><label for="prod_name">Product Name:</label>
-       <input type="text" id="prod_name" name="product[name]" value="<%= @product.name %>"></p>
-    <p><label for="prod_name">Mfg:</label>
-       <input type="text" id="mfg" value="<%= @vendor.name %>"></p>
+       <input type="text" id="prod_name" name=product[name] value="<%= @product.name %>"></p>
+    <!-- <p><label for="prod_name">Mfg: </label> -->
+       <!-- <input type="text" id="mfg" value="<%#= @vendor.name %>"></p> -->
+       <p>Mfg: <%= @vendor.name %></p>
     <div class="row">
       <div class="col1">
         <%= image_tag("spree/manage/img/product-img4.jpg", class: "prodcut-view-img")%>
@@ -18,9 +20,9 @@
         </div>
         <div class="checkbox-block">
           <!-- <p><b>Lead Time (days):</b> -->
-            <label>Lead Time (days):
+            <!-- <label>Lead Time (days):
             <input type="number" name="" value="0">
-          </label>
+          </label> -->
             <!-- <select name="lead_time:" id="lead_time">
               <option value="none">None</option>
               <option value="option 1">Option 1</option>
@@ -40,10 +42,10 @@
     <div class="divider2"></div>
     <div class="product-size-block">
       <div class="col1">
-        <a href="" id="close-button"><i class="fa fa-times"></i></a>
+        <!-- <a href="" id="close-button"><i class="fa fa-times"></i></a> -->
       </div>
       <div class="col2">
-        <p><label for="sku">SKU #</label> <input type="text" id="sku" value="234134"></p>
+        <p><label for="sku">SKU #</label> <input type="text" id="sku" name=product[sku] value="<%= variant.sku %>"></p>
       </div>
       <div class="col3">
         <div class="leftpart">
@@ -60,7 +62,7 @@
         <div class="rightpart">
           <p>
             <label>Price: </label>
-            <input type="text" id="price" name="" value="<%= number_to_currency(variant.price) %>">
+            <input type="text" id="price" name=product[price] value="<%= number_to_currency(variant.price) %>">
           </p>
         </div>
         <!-- <div class="datepicker-block">
@@ -91,10 +93,11 @@
 
     <div class="divider2"></div>
     <div class="product-edit-buttons">
-      <a href="" class="cta-button white"><i class="fa fa-plus"></i> Add new size</a>
-      <input type="submit" value="Remove product">
-      <a href="" class="cta-button white">Save</a>
+      <!-- <a href="" class="cta-button white"><i class="fa fa-plus"></i> Add new size</a> -->
+      <!-- <input type="submit" value="Remove product"> -->
+      <!-- <a href="" class="cta-button white">Save</a> -->
+      <button class="cta-button white">Update</button>
       <div class="clear"></div>
     </div>
-  </form>
+  <% end %>
 </div>
