--- a/app/views/spree/manage/products/new.html.erb
+++ b/app/views/spree/manage/products/new.html.erb
@@ -1,46 +1,67 @@
-<form action="<%= manage_products_url %>" method="post">
-  <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
+<div class="product-edit-block">
+  <!-- <form id="product-edit-form"> -->
+  <%= form_for @product, url: manage_products_url, html: {id: "product-edit-form"} do |f|%>
+    <%= render partial: 'form' %>
 
-  <h1>New Product <input type="text" name="" placeholder="Product Name"></h1>
-
-  <h5>Manufacturer: <input type="text" name="" placeholder="Mfg"></h5>
-
-  <div class="group">
-    <div class="product-left">
-      <img src="", alt="Image not Available">
-      <a href="#">Upload New Image</a>
-
-      <div class="allergans">
-        <label><input type="checkbox" name="" value="">Nuts</label><br>
-        <label><input type="checkbox" name="" value="">Dairy</label><br>
-        <label><input type="checkbox" name="" value="">Seafood</label><br>
-        <label><input type="checkbox" name="" value="">Gluten</label><br>
-        <label><input type="checkbox" name="" value=""></label><br>
-        <label><input type="checkbox" name="" value=""></label><br>
-        <label><input type="checkbox" name="" value=""></label><br>
+    <div class="divider2"></div>
+    <div class="product-size-block">
+      <div class="col1">
+        <!-- <a href="" id="close-button"><i class="fa fa-times"></i></a> -->
       </div>
+      <div class="col2">
+        <p><label for="sku">SKU #</label> <input type="text" id="sku" name=product[sku] value="<%= @product.sku %>"></p>
+      </div>
+      <div class="col3">
+        <div class="leftpart">
+          <p>
+            <label>Pack/Size:
+              <input type="text" name="" value="Each">
+            </label>
+            <!-- <select name="pack_size:" id="pack_size">
+              <option value="none">Each</option>
+              <option value="option 1">Option 1</option>
+            </select> -->
+          </p>
+        </div>
+        <div class="rightpart">
+          <p>
+            <label>Price: </label>
+            <input type="text" id="price" name=product[price] value="<%= number_to_currency(@product.price) %>">
+          </p>
+        </div>
+        <!-- <div class="datepicker-block">
+          <div class="leftpart">
+            <p><input type="checkbox" id="promotional"><label for="promotional">Promotional</label></p>
+          </div>
+          <div class="rightpart">
+            <p><label for="promo_price">Promo Price:</label> <input type="text" id="promo_price" value=""></p>
+          </div>
+          <div class="leftpart">
+            <p class="datepicker-cont"><label for="date_start">Start:</label>
+              <input type="text" class="datepicker" id="date_start" value="">
+              <%#= image_tag("spree/manage/img/datepicker-ico.jpg", class: "date-icon") %>
+            </p>
+          </div>
+          <div class="rightpart">
+            <p class="datepicker-cont">
+              <label for="date_end">End:</label>
+              <input type="text" class="datepicker" id="date_end" value="">
+              <%#= image_tag("spree/manage/img/datepicker-ico.jpg", class: "date-icon") %>
+            </p>
+          </div>
+        </div> -->
+      </div>
+      <div class="clear"></div>
     </div>
 
-    <div class="product-right">
-      <textarea class="product-description" name="">This is the @product description. Not sure
-        if there is a field in the DB for this yet, still have to check. But this
-        is where it would go.
-      </textarea>
 
-      <ul class="dietary-restrictions">
-        <label><input type="checkbox" name="" value=""></label>Gluten Free<br>
-        <label><input type="checkbox" name="" value=""></label>Vegetarian<br>
-        <label><input type="checkbox" name="" value=""></label>Vegan<br>
-      </ul>
-
+    <div class="divider2"></div>
+    <div class="product-edit-buttons">
+      <!-- <a href="" class="cta-button white"><i class="fa fa-plus"></i> Add new size</a> -->
+      <!-- <input type="submit" value="Remove product"> -->
+      <!-- <a href="" class="cta-button white">Save</a> -->
+      <button class="cta-button white">Save</button>
+      <div class="clear"></div>
     </div>
-  </div>
-
-  <section class="product-bottom group">
-    <label>Meta Tags
-      <input type="text" name=product[meta_tags] value="">
-    </label>
-  </section>
-
-  <button class="add-to-order">Save Product</button>
-</form>
+  <% end %>
+</div>
