--- a/app/views/spree/manage/shared/_head.html.erb
+++ b/app/views/spree/manage/shared/_head.html.erb
@@ -11,7 +11,7 @@
   <% if content_for? :title %>
     <%= yield :title %>
   <% else %>
-    <%= "Spree #{Spree.t('administration')}: " %>
+    <%= "Sweet - " %>
     <%= Spree.t(controller.controller_name, :default => controller.controller_name.titleize) %>
   <% end %>
 </title>
