--- a/app/views/spree/manage/root/overview.html.erb
+++ b/app/views/spree/manage/root/overview.html.erb
@@ -12,7 +12,7 @@
 								<%= render 'spree/manage/root/app_dash_widget/food_sales' %>
 
 								<div class="col2">
-									<a href="" id="basic-modal" class="cta-link">Enter Saless</a>
+									<a href="" id="basic-modal" class="cta-link">Enter Sales</a>
 								</div>
 
 								<div class="clear"></div>
